...
            horizontalAlignment =
                Alignment.CenterHorizontally
        ) {
            CircularProgressIndicator()

            Text(
                text = "Loading quiz preferences...",
                modifier = Modifier.padding(
                    top = 16.dp
                )
            )
        }

...
            .padding(horizontal = 20.dp),
        verticalArrangement =
            Arrangement.spacedBy(16.dp)
    ) {
        item {
            Text(
                text = "Choose Your Quiz",
                style =
                    MaterialTheme.typography
                        .headlineMedium,
                fontWeight = FontWeight.Bold,
                modifier = Modifier.padding(
                    top = 20.dp
...
